Update 'rfmhjgqgt-dotnet-basic' component image to: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:63c0f922849f7504b780fae1de2fcdc729c98324@sha256:52d25aed5da9c9cf6acb3859526384b728326211270d152c9eacdd22ea5d359c

--- a/components/rfmhjgqgt-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/rfmhjgqgt-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: rfmhjgqgt-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:63c0f922849f7504b780fae1de2fcdc729c98324@sha256:52d25aed5da9c9cf6acb3859526384b728326211270d152c9eacdd22ea5d359c
+          name: container-image
